--- a/Public/css/dashboard.css
+++ b/Public/css/dashboard.css
@@ -68,6 +68,7 @@
 			overflow-x: hidden;
 			overflow-y: auto;
 			transition: all 0.15s ease;
+		z-index: 999;
 			
 		}
 
@@ -378,11 +379,17 @@
 				background-color: transparent;
 			font-weight: 700;
 			}
+
+			#page-layout .main-page-layout .main-header .header-wrapper .header-menu  .admin-dropdown .dropdown-btn .text,
+			#page-layout .main-page-layout .main-header .header-wrapper .header-menu  .admin-dropdown .dropdown-btn .icon{
+			pointer-events: none;
+			}
 			
 			#page-layout .main-page-layout .main-header .header-wrapper .header-menu  .admin-dropdown .dropdown-btn .icon .img-fluid{
-				border-radius: 50%;
-				width: 40px;
-				height: 40px;
+				border-radius: 50%;				
+				width: 40px;				
+				height: 40px;				
+				display: inline !important;
 			}
 			
 			#page-layout .main-page-layout .main-header .header-wrapper .header-menu  .admin-dropdown{
@@ -655,6 +662,12 @@
 		display: block;
 		align-items: center;
 	}
+	
+	#page-layout .sidebar-collapse .sidebar-wrapper .sidebar-middle .sidebar-menu .accordion .sidebar-accordion-body .accordion-menu {
+    list-style-type: none;
+    padding: 0px 10px;
+    margin: 0;
+}	
 
 
 /*			End of toggle mode*/
@@ -740,7 +753,7 @@
 				border: 1px rgba(0, 0, 0, 0.3);
 				border-bottom-left-radius: 5px;
 				border-bottom-right-radius: 5px;
-				box shadow: 0px 8px 8xp 8px rgba(0, 0, 0, 0.3);
+				box-shadow : 0px 8px 8px 8px rgba(0, 0, 0, 0.3);
 				width: 96%;
 				display: none;
 				transition : show 0.5s ease;
@@ -755,6 +768,7 @@
 				display: block !important;
 				margin: 8px 10px;
 				padding: 8px 8px;
+				z-index: 999;
 			}
 			
 			#page-layout .main-page-layout .main-header .header-wrapper .header-menu .header-menu-item .header-menu-link .text{
